--- a/0x00-Webpack/task_0/package.json
+++ b/0x00-Webpack/task_0/package.json
@@ -6,5 +6,15 @@
   "dependencies": {
     "jquery": "^3.6.0",
     "jQuery": "^1.7.4"
-  }
+  },
+  "name": "task_0",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
